# Fantasy

./: .env.example  .gitignore  .replit  Makefile  README.md  app.py  database.py  docker-compose.yml  fpl_data.db  optimizer.py
backend/: README.md  pyproject.toml  requirements.txt  setup.py
backend/data/: .gitkeep
backend/migrations/: drop_fpl_tables.sql  migration_fix_all_integer_overflow.sql  migration_fix_integer_overflow.sql
backend/src/: __init__.py
backend/src/analysis/: dynamic_fdr.py
backend/src/api/: __init__.py  main.py
backend/src/cli/: __init__.py  crawl_managers.py
backend/src/core/: __init__.py  async_db.py  cache.py  cache_warming.py  celery_app.py  chip_strategy_optimizer.py  config.py  data_collector.py  database.py  db_factory.py  enhanced_optimizer.py  formation_optimizer.py  manager_training_data.py  multi_gw_optimizer.py  optimizer.py  personalized_optimizer.py  postgres_db.py  training_data.py
backend/src/features/: __init__.py  advanced_features.py
backend/src/integrations/: __init__.py  fbref_scraper.py  odds_api.py  xg_estimator.py  xg_integrator.py
backend/src/middleware/: __init__.py  monitoring.py  rate_limit.py  rate_limiter.py
backend/src/models/: __init__.py  captain_bandit.py  enhanced_predictor.py  ensemble_predictor.py  injury_risk_predictor.py  minutes_model.py  model_version_manager.py  points_model.py
backend/src/schemas/: __init__.py  models.py
backend/src/services/: ab_testing.py  auto_retrain.py  elite_analyzer.py  feature_importance_tracker.py  fpl_api_client.py  (+3 more)
backend/tests/: __init__.py  conftest.py
(+83 files in other folders)
