[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.6.0",
    "numpy>=2.3.3",
    "ortools>=9.14.6206",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.49.1",
    "trafilatura>=2.0.0",
]
